--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="row">
       <div class="col-12 text-center py-3 gap-5">
         <button type="button" class="btn btn-success border generate">Genera</button>
-        <button type="button" class="btn btn-danger border">Annulla</button>
+        <button type="button" class="btn btn-danger border reset">Annulla</button>
       </div>
     </div>
   </div>
@@ -48,6 +48,7 @@
       <h2><strong>DETTAGLIO PASSEGGERI</strong></h2>
       <div class="row bg-white rounded-2 mt-4">
         <div class="col-3 mt-2">
+          <h3><strong>Nome Passeggero:</strong></h3>
           <h3 id="name"></h3>
         </div>
         <div class="col-3 mt-2">
